# rna-algos

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: contralign.params.rna
benches/: benches.rs
scripts/: compile_rna_fams.py  get_stats_of_ss_estimation_programs.py  run_ss_estimation_programs.py  utils.py
src/: centroid_estimator.rs  centroid_fold.rs  compile_rna_fams.py  compiled_align_scores.rs  compiled_seq_align_params.rs  contrafold.rs  durbin_algo.rs  get_stats_of_ss_estimation_programs.py  lib.rs  mccaskill_algo.rs  run_all.py  run_ss_estimation_programs.py  tests.rs  utils.rs
tests/: lib.rs  tests.rs
