[package]
name = "rna-algos"
version = "0.1.11"
authors = ["heartsh <heartsh@heartsh.io>"]
description = "\"rna-algos\", Library of Algorithms about RNAs"
repository = "https://github.com/heartsh/rna-algos"
readme = "README.md"
keywords = ["bioinformatics", "rna", "secondary-structure"]
license = "MIT"

[dependencies]
rna-ss-params = "0.1"
lazy_static = "0.1"
bio-seq-algos = "0.1"
scoped_threadpool = "0.1"
getopts = "0.2"
bio = "0.20"
num_cpus = "1.0"
itertools = "0.8"
time = "0.1"
num = "0.3"

[lib]
path = "src/lib.rs"
name = "rna_algos"
