[package]
name = "rna-algos"
version = "0.1.37"
authors = ["heartsh <heartsh@heartsh.io>"]
description = "Library of RNA Bioinformatics Algorithms"
repository = "https://github.com/heartsh/rna-algos"
readme = "README.md"
keywords = ["bioinformatics", "rna", "secondary-structure"]
license = "MIT"

[dependencies]
rna-ss-params = "0.1"
scoped_threadpool = "0.1"
getopts = "0.2"
bio = "1.1"
num_cpus = "1.0"
itertools = "0.10"
num = "0.3"
hashbrown = "0.13"

[dev-dependencies]
criterion = "0.3"

[lib]
path = "src/lib.rs"
name = "rna_algos"

[[bench]]
name = "benches"
harness = false
